Added SIGame, Object, Missile classes

--- a/TalonsParkourAdventure/app/src/main/AndroidManifest.xml
+++ b/TalonsParkourAdventure/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:screenOrientation="landscape"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name=".Game.Game.Game"
+            android:name=".Game.Game.TalonsParkourAdventure"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_fullscreen"
             android:screenOrientation="landscape"
